--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -63,7 +63,7 @@
       }
 
       &.popup__icon--bg-white {
-        color: var(--color-blue);
+        color: var(--color-black);
       }
 
       &:after {
