updates to main page responsive design.

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -312,6 +312,10 @@ input + label {
   color: var(--color-paper);
 }
 
+.layer--navigation {
+  z-index: map-get($z-index, navigation);
+}
+
 .text-light {
   font-weight: 200;
 }
