--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -56,7 +56,7 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
-  margin: 1em 0;
+  margin: 4em 0;
   padding: 0;
 }
 
@@ -203,7 +203,11 @@ textarea {
 .h6 {
   font-family: $font-display;
   line-height: 1.2em;
-  margin-bottom: 1rem;
+  margin: 2rem 0 1rem;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 .h2 {
