--- a/_scss/_footnotes.scss
+++ b/_scss/_footnotes.scss
@@ -1,12 +1,26 @@
 .footnote {
-  margin: 2rem 0;
+  margin: 4rem 0;
+  position: relative;
+
   :target {
     background-color: var(--color-yellow);
+  }
+
+  &:before {
+    @extend %fa-icon;
+    @extend .far;
+    font-size: 8rem;
+    content: fa-content($fa-var-check-circle);
+    position: absolute;
+    left: -10rem;
+    top: 0;
   }
 }
 
 .footnote-title {
+  font-family: $font-display;
   font-size: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .footnote-list {
@@ -15,7 +29,7 @@
   padding: 0;
 
   .footnote-list__item {
-    padding: 0 0.25rem;
+    padding: 0;
   }
 
   p {
