--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'vars';
 @import '../assets/fontawesome-free-5.13.0-web/scss/fontawesome';
+@import '../assets/fontawesome-free-5.13.0-web/scss/regular';
 @import '../assets/fontawesome-free-5.13.0-web/scss/solid';
 @import '../assets/fontawesome-free-5.13.0-web/scss/brands';
 @import 'base';
