--- a/_scss/_sections.scss
+++ b/_scss/_sections.scss
@@ -20,7 +20,7 @@
     justify-content: flex-end;
     overflow: hidden;
     min-height: 1100px;
-    background-color: var(--color-paper);
+    background-color: var(--color-blue);
   }
 
   #section-intro-1 {
