--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -183,14 +183,14 @@ textarea {
   background-position: 0 100%;
   background-repeat: repeat-x;
   background-size: 4px 4px;
-  color: var(--color-black);
+  color: $color-black;
   text-decoration: none;
   transition: background-size .2s;
   padding: 0.25rem;
 
   &:hover,
   &:focus {
-    color: var(--color-paper);
+    color: $color-paper;
     background-size: 4px 100%;
   }
 }
@@ -293,27 +293,27 @@ input + label {
 }
 
 .text-yellow {
-  color: var(--color-yellow);
+  color: $color-yellow;
 }
 
 .text-blue {
-  color: var(--color-blue);
+  color: $color-blue;
 }
 
 .text-blue-light {
-  color: var(--color-blue-light);
+  color: $color-blue-light;
 }
 
 .text-blue-dark {
-  color: var(--color-blue-dark);
+  color: $color-blue-dark;
 }
 
 .text-purple {
-  color: var(--color-purple);
+  color: $color-purple;
 }
 
 .text-white {
-  color: var(--color-paper);
+  color: $color-paper;
 }
 
 .layer--navigation {
