--- a/_scss/_footnotes.scss
+++ b/_scss/_footnotes.scss
@@ -50,14 +50,14 @@ a[aria-describedby^="footnote-"]::after {
   vertical-align: super;
   font-size: 0.5em;
   margin-left: 2px;
-  color: var(--color-black);
+  color: $color-black;
   text-decoration: none;
   cursor: pointer;
 }
 
 a[aria-describedby^="footnote-"]:focus::after,
 a[aria-describedby^="footnote-"]:hover::after {
-  color: var(--color-blue-dark);
+  color: $color-blue-dark;
   outline: thin dotted;
   outline-offset: 2px;
 }
